monitoring/prometheus/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  nodeSelector:
    type: temporal
  containers:
  - name: nginx
    image: nginx:1.14.2
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
    ports:
    - containerPort: 80
