monitoring/prometheus/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-statefulset
  namespace: monitoring
  labels:
    app: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  serviceName: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.53.1
          args:
            - --storage.tsdb.retention.size=10GB
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus/
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-local-data-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
  volumeClaimTemplates:
    - metadata:
        name: prometheus-local-data-volume
        namespace: prometheus
      spec:
        storageClassName: local
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        selector:
          matchLabels:
            directory: prometheus-data
